--- a/koreacovid.Rmd
+++ b/koreacovid.Rmd
@@ -69,7 +69,7 @@ colPerc(table2)
 
 Men died at almost twice the rate as women did. 36% of the dead count was females and 64% of the dead count was men.
 
-Only 1.4% of Korean females died and only 3% of Korean men died in Korea died from Covid-19. 
+1.4% of Korean females died and  3% of Korean men died.
 
 
 ## Inferential results 
